added imports and tools to the project

--- a/end-to-end.ipynb
+++ b/end-to-end.ipynb
@@ -65,17 +65,43 @@
     "    * 1 = fixed defect;\n",
     "    * 2 = reversable de2018The `target` variable which shows if the patient has heart disease or not\n",
     "    * 0 = no heart disease\n",
-    "    * 1 = have heart diseaseues.\n",
+    "    * 1 = have heart diseasetion\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "fbfb69d6-759b-4180-8501-b620afd59389",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Preparing the tools \n",
     "\n",
-    "## Modelling \n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt \n",
+    "import seaborn as sns\n",
+    "%matplotlib inline\n",
     "\n",
-    "## Experimentation\n"
+    "from sklearn.compose import ColumnTransformer\n",
+    "from sklearn.impute import SimpleImputer\n",
+    "from sklearn.preprocessing import OneHotEncoder\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "\n",
+    "from sklearn.model_selection import train_test_split, RandomizedSearchCV, GridSearchCV, cross_val_score\n",
+    "\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "\n",
+    "from sklearn.metrics import RocCurveDisplay, ConfusionMatrixDisplay\n",
+    "from sklearn.metrics import confusion_matrix, classification_report, precision_score, recall_score, f1_score, roc_auc_score, roc_curve"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fbfb69d6-759b-4180-8501-b620afd59389",
+   "id": "ff67e9ba-c8b2-4d01-9aa1-0993c190cec2",
    "metadata": {},
    "outputs": [],
    "source": []
